--- a/src/main/webapp/pages/depSalud/medicina/enfermedadescie10.xhtml
+++ b/src/main/webapp/pages/depSalud/medicina/enfermedadescie10.xhtml
@@ -4,11 +4,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       template="/WEB-INF/view/templates/glue.xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:s="http://jboss.org/seam/faces"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:p="http://primefaces.org/ui"      
-      xmlns:pe="http://primefaces.org/ui/extensions"
+      xmlns:f="http://java.sun.com/jsf/core"      
+      xmlns:p="http://primefaces.org/ui"    
       xmlns:glue="http://eqaula.org/jsf/facelets"
       xmlns:ocp="http://java.sun.com/jsf/composite/ocpcommon">
 
@@ -36,7 +33,8 @@
                 <glue:input id="description" name="descrip" type="text" label="Categoria" value="#{enfermedadesCieHome.instance.description}" required="false" inlinehelp="" execute="@this save" render="description"/>
                 <div class="admin-actions ">
                     <p:commandButton id="save" action="#{enfermedadesCieHome.guardar()}" value="#{messages['common.save']}" 
-                                     update="tablaEnf" styleClass="btn primary offset2"/>
+                                      styleClass="btn primary offset2" update="tablaEnf">                                                
+                    </p:commandButton>
                     &nbsp;&nbsp;
                     <h:link outcome="/pages/home.xhtml?faces-redirect=true" 
                             value="#{messages['common.cancel']}" styleClass="btn primary" >                         
