--- a/src/main/webapp/pages/paciente/view.xhtml
+++ b/src/main/webapp/pages/paciente/view.xhtml
@@ -12,7 +12,7 @@
       xmlns:glue="http://eqaula.org/jsf/facelets"
       xmlns:ocp="http://java.sun.com/jsf/composite/ocpcommon">
 
-    <ui:composition template="/WEB-INF/view/templates/gluePaciente.xhtml">
+    <ui:composition template="/WEB-INF/view/templates/glue.xhtml">
         <f:metadata>
             <f:viewParam name="pacienteId" value="#{pacienteHome.pacienteId}" />
             <f:viewParam name="backView" value="#{pacienteHome.backView}" />
@@ -21,13 +21,26 @@
         <ui:define name="header-replace">
             <div class="header-replace">
                 <div class="container">
-                    <div class="row fl" style="margin-top: 5px;">
+                    <div class="row fl row-title" >
                         <h2>#{pacienteHome.managed? messages['common.edit'] : messages['common.add']} #{pacienteHome.instance.nombres}</h2>   
                     </div>
                 </div>
             </div>
+        </ui:define>        
+        <ui:define name="sidebar">
+            <p:panel  header="Panel de Administracion">
+                <h:link value="Datos de Paciente" rendered="#{true}" 
+                                outcome="/pages/paciente/view">
+                    <f:param name="pacienteId" value="#{pacienteHome.pacienteId}"/>
+                </h:link>
+                <br/>
+                <h:link value="Modificar Foto" rendered="#{true}" 
+                                outcome="/pages/paciente/foto">
+                    <f:param name="pacienteId" value="#{pacienteHome.pacienteId}"/>
+                </h:link>
+            </p:panel>
         </ui:define>
-        <ui:define name="content" class="span20">
+        <ui:define name="content" >
             <h:form id="form">
                 <p:panel id="datapersonal" header="#{messages['module.profile.data.personal']}">                    
                     <div class="container-fluid">   
