--- a/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
@@ -9,22 +9,8 @@
         <ui:define name="header-replace" >
             <div class="header-replace">
                 <div class="container-header" >
-                    <div class="row lf" style="margin-top: 0.05%; margin-left: 2%" >
-                        <div class="span9 columns">
-                            <div class="row fl" style="margin-top: 5px;">
-                                <h2>#{messages['medicamento.admin']}</h2>   
-                            </div>                    
-                        </div> 
-                        <!--Div para boton de regreso a inicio-->
-                        <div class="span4 columns offset3">
-                            <h:form id="control">  
-                                <br/>
-                                <h:link value="#{messages['panel.admin']} " rendered="#{true}" 
-                                        outcome="/pages/home.xhtml?faces-redirect=true" styleClass="btn secondary">                                
-                                </h:link>  
-                                <br/>                                             
-                            </h:form>
-                        </div>
+                    <div class="row lf row-title" style="margin-top: 0.05%; margin-left: 2%" >
+                        <h2>#{messages['medicamento.admin']}</h2>   
                     </div> 
                 </div>   
             </div>            
@@ -121,6 +107,20 @@
                         <h:outputText value="#{medicamento_.alerta}" rendered="#{not empty medicamento_.alerta}" style="color: red;"/>
                     </p:column>
                 </p:dataTable>
+                <h:panelGrid id="export" class="columns" >
+                    <p:panel>
+                        <h:outputText value="Exportar Datos" />  
+                        <br/>
+                        <h:commandLink action="#{reporteListas.renderMedicamentos()}" >                    
+                            <p:graphicImage value="/resources/images/pdf.png" />                          
+                        </h:commandLink>
+                        #{''}
+                        <h:commandLink >  
+                            <p:graphicImage value="/resources/images/xls1.png" />  
+                            <p:dataExporter type="xls" target="tablaMedicamentos" fileName="medicamentos"/>  
+                        </h:commandLink>
+                    </p:panel>
+                </h:panelGrid>
             </h:form>
         </ui:define>
 
