--- a/src/main/webapp/pages/depSalud/medicina/consultaMedica.xhtml
+++ b/src/main/webapp/pages/depSalud/medicina/consultaMedica.xhtml
@@ -31,7 +31,7 @@
         </ui:define>
         <ui:define name="content">
             <h:form id="form">                
-                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
+                <!--<p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  -->
                 <p:growl id="growl" showDetail="true" sticky="true" escape="false" autoUpdate="true" life="300"/>  
                 <p:panel id="consultaM" header="Información de Consulta" toggleable="true" >
                     <p:panelGrid columns="3">
@@ -70,7 +70,7 @@
                     <p:tab title="#{messages['signosVitales.Nombre']}" titletip="#{messages['signosVitales.Nombre']}" >
                         <div class="container-fluid">   
                             <div class="row-fluid">
-                                <div id="left" class="span8" style="margin-left: -10px;">
+                                <div id="left" class="span8" style="margin-left: 10px;">
                                     <p:panelGrid columns="2">
                                         <label for="peso" class="span3">#{messages['signosVitales.peso']} *</label>
                                         <div class="input"> 
@@ -104,7 +104,7 @@
                                         </pe:inputNumber>                                        
                                     </p:panelGrid>                                                                                             
                                 </div>
-                                <div id="left" class="span8"  style="margin-left: -40px; ">
+                                <div id="left" class="span8"  style="margin-left: 10px; ">
                                     <p:panelGrid columns="2">
                                         <label for="frecuenciaResp" class="span3">#{messages['signosVitales.frecuenciaResp']} *</label>
                                         <div class="input">                                                                                
@@ -259,8 +259,7 @@
                 </p:tabView>
                 <p:tabView  rendered="#{consultaMedicaHome.instance.persistent}">
                     <p:tab title="#{messages['receta.Nombres']}" rendered="true" >
-                        <h:link outcome="/pages/farmacia/receta/recetas" value="#{messages['common.add']} #{messages['receta.nombre']}" styleClass="btn primary" >
-                            <f:param name="fichaMedicaId" value="#{consultaMedicaHome.fichaMedicaId}"></f:param>
+                        <h:link outcome="/pages/depSalud/receta" value="#{messages['common.add']} #{messages['receta.nombre']}" styleClass="btn primary" >                            
                             <f:param name="consultaMedicaId" value="#{consultaMedicaHome.instance.id}"></f:param>
                             <f:param name="backView" value="/medicina/consultaMedica"></f:param>
                         </h:link>
@@ -270,18 +269,15 @@
                                 <p:outputLabel value="#{recetaM_.fecha}">
                                     <f:convertDateTime pattern="dd-MMM-yyyy"/>
                                 </p:outputLabel>
-                            </p:column> 
-                            <p:column headerText="#{messages['medicamento.Nombre']}" style="width: 7%">
-                                <p:outputLabel value="#{recetaM_.medicaciones.sise()}"/>                                   
-                            </p:column>
+                            </p:column>                             
                             <p:column headerText="#{messages['receta.Responsable']} #{messages['receta.emision']}" style="width: 7%">
-                                <p:outputLabel value="#{recetaM_.responsableEmision}"/>                                   
+                                <p:outputLabel value="#{recetaM_.responsableEmision.fullName}"/>                                   
                             </p:column>
                             <p:column headerText="#{messages['comun.estado']} #{messages['receta.emision']}" style="width: 7%">
                                 <p:outputLabel value="#{recetaM_.estado}"/>                                   
                             </p:column>
                             <p:column headerText="#{'Opción'} #{messages['receta.emision']}" style="width: 7%">
-                                <h:link value="#{messages['common.edit']}" outcome="/pages/farmacia/receta/recetas" >                                
+                                <h:link value="#{messages['common.edit']}" outcome="/pages/depSalud/receta" >                                
                                     <f:param name="fichaMedicaId" value="#{consultaMedicaHome.fichaMedicaId}"></f:param>
                                     <f:param name="consultaMedicaId" value="#{consultaMedicaHome.instance.id}"></f:param>
                                     <f:param name="recetaId" value="#{recetaM_.id}"></f:param>
