--- a/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
+++ b/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
@@ -4,28 +4,17 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
     <ui:composition template="/WEB-INF/view/templates/glue.xhtml">
         <ui:define name="header-replace" >
             <div class="header-replace">            
-                <div class="container">
-                    <div class="span9 columns">
-                        <div class="row fl" style="margin-top: 5px;">
-                            <h2>#{messages['receta.admin']}</h2>   
-                        </div>                    
+                <div class="container-header">                
+                    <div class="row lf row-title" > 
+                        <h2>#{messages['receta.admin']}</h2>   
                     </div> 
-                    <!--Div para boton de regreso a inicio-->
-                    <div class="span4 columns offset3">
-                        <h:form id="control">  
-                            <br/>
-                            <h:link value="#{messages['panel.admin']} " rendered="#{true}" 
-                                    outcome="/pages/home.xhtml?faces-redirect=true" styleClass="btn secondary">                                
-                            </h:link>  
-                            <br/>                                             
-                        </h:form>
-                    </div>
-                </div> 
-            </div>   
+                </div>   
+            </div>  
 
         </ui:define>
 
@@ -43,72 +32,82 @@
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
 
                 <!--Botones de admin-->
-                <div class="admin-actions span17">
-                    <div class="span6 ">
-                        <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="receta" styleClass="btn primary">
+                <div class="admin-actions">                    
+                        <!--<h:link value="#{messages['common.add']}" rendered="#{true}" outcome="receta" styleClass="btn primary">
                             <f:param name="pacienteId"></f:param>
                             <f:param name="backView" value="lista"></f:param>
                         </h:link>
-                        #{' '}
-                        <h:link id="button-edit" value="#{messages['common.edit']}" rendered="#{true}" outcome="medicamento" styleClass="btn" 
-                                disabled="#{empty recetaListaServicio.recetaSeleccionada }">
-                            <f:param name="recetaId" value="#{recetaListaServicio.recetaSeleccionada.id}"></f:param>
-                            <f:param name="backView" value="lista"></f:param>
-                        </h:link>
-                    </div>
-                    <div class="span6 offset5" >
+                    #{' '}
+                    <h:link id="button-edit" value="#{messages['common.edit']}" rendered="#{true}" outcome="medicamento" styleClass="btn" 
+                            disabled="#{empty recetaListaServicio.recetaSeleccionada }">
+                        <f:param name="recetaId" value="#{recetaListaServicio.recetaSeleccionada.id}"></f:param>
+                        <f:param name="backView" value="lista"></f:param>
+                    </h:link>-->
+                    <p:commandButton id="button-edit" value="#{messages['receta.entrega']}" styleClass="btn primary"
+                                     onclick="#{'editDlg.show();'}" ajax="true" disabled="#{empty recetaListaServicio.recetaSeleccionada}">
+                        <p:ajax process="@this" update=":edit-dialog"/>
+                    </p:commandButton>
+                    &nbsp;&nbsp;
+                    <p:commandLink id="button-print" value="#{messages['common.print']}" styleClass="btn primary" action="#{reporteReceta.renderReceta()}"
+                                   disabled="#{empty recetaListaServicio.recetaSeleccionada}" rendered="true" immediate="true">
+                        <f:param name="medicaciones" value="#{recetaListaServicio.recetaSeleccionada.medicaciones}" rendered="true"/>
+                        <f:param name="indicaciones" value="#{recetaListaServicio.recetaSeleccionada.indicaciones}" rendered="true"/>
+                        <f:param name="nombres" value="#{recetaListaServicio.recetaSeleccionada.paciente.nombres}" rendered="true"/>
+                        <f:param name="apellidos" value="#{recetaListaServicio.recetaSeleccionada.paciente.apellidos}" rendered="true"/>
+                        <f:param name="recetaId" value="#{recetaListaServicio.recetaSeleccionada.id}" rendered="true"/>
+                    </p:commandLink>
+
+                    <div style="float: right" >
                         <p:inputText id="criterioBuscar" size ="25" value="#{recetaListaServicio.parametroBusqueda}" title="Ingrese un criterio de busqueda">
                             <p:ajax event="keyup" update="tablaRecetas"/>
                         </p:inputText>
                         &nbsp;
                         <p:commandButton value="Buscar" action="#{recetaListaServicio.buscarPorParametro()}" update="tablaRecetas" styleClass="btn info"/>                    
                     </div>
-                </div>
-
+                </div>                
                 <p:dataTable id="tablaRecetas"  var="receta_" value="#{recetaListaServicio.resultList}"
-                             paginator="true" rows="20" styleClass="span18"                              
-                             paginatorPosition="top"
+                             paginator="true" rows="20"  paginatorPosition="top"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
                              rowsPerPageTemplate="5,10,20,50,100"
-                             lazy="true"
-                             rowKey="#{receta_.id}"
-                             selection="#{recetaListaServicio.recetaSeleccionada}"
-                             rendered="true"
+                             lazy="true" rowKey="#{receta_.id}"
+                             selection="#{recetaListaServicio.recetaSeleccionada}"                             
                              selectionMode="single">
                     <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
                     <p:ajax event="rowSelect" listener="#{recetaListaServicio.onRowSelect}"
-                            update=":form:button-edit :form:messages "/>   
-                    <p:ajax event="rowUnselect" listener="#{recetaListaServicio.onRowUnselect}" update=":form:button-edit :form:messages"/>
+                            update=":form:button-edit :form:messages :form:button-print :edit-dialog"/>   
+                    <p:ajax event="rowUnselect" listener="#{recetaListaServicio.onRowUnselect}" 
+                            update=":form:button-edit :form:messages :form:button-print :edit-dialog"/>
                     <!--Columnas para mostrar en la tabla-->
 
                     <p:column sortBy="#{receta_.id}" style="width: 10%; text-align: center;">
                         <f:facet name="header">  
-                            <h:outputText value="#{'Id Receta'}" />  
+                            <h:outputText value="#{messages['fichaMedica.numero']}" />  
                         </f:facet>  
-                        <h:outputText value="#{receta_.id}" />                        
+                        <h:outputText value="#{receta_.consultaMedica.historiaClinica.fichaMedica.numFicha}" rendered="#{receta_.consultaMedica.persistent}"/>                        
+                        <h:outputText value="#{receta_.consultaOdontologica.fichaOdontologica.fichaMedica.numFicha}" rendered="#{receta_.consultaOdontologica.persistent}"/>                        
                     </p:column>
                     <p:column sortBy="#{receta_.paciente.nombres}" style="text-align: center;">
                         <f:facet name="header">  
-                            <h:outputText value="#{messages['common.firstname']}" />  
+                            <h:outputText value="Paciente" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.paciente.nombres}" />
-                    </p:column>
-                    <p:column sortBy="#{receta_.paciente.apellidos}" style="text-align: center;">
-                        <f:facet name="header">  
-                            <h:outputText value="#{messages['common.surname']}" />  
-                        </f:facet> 
+                        &nbsp;&nbsp;
                         <h:outputText value="#{receta_.paciente.apellidos}" />
-                    </p:column>
+                    </p:column>                                
                     <p:column sortBy="#{receta_.fecha}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['fechaReceta.fechaEmision']}" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.fecha}" >
                             <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
-                        </h:outputText>
-                        
+                        </h:outputText>                        
                     </p:column>
-
+                    <p:column sortBy="#{receta_.estado}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{messages['comun.estado']}" />  
+                        </f:facet> 
+                        <h:outputText value="#{receta_.estado}" />
+                    </p:column>
                     <p:column sortBy="#{receta_.responsableEmision}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['receta.responsableEmision']}" />  
@@ -118,14 +117,65 @@
 
                     <p:column sortBy="#{receta_.responsableEntrega}" style="text-align: center;">
                         <f:facet name="header">  
-                            <h:outputText value="#{'receta.responsableEntrega'}" />  
+                            <h:outputText value="#{messages['receta.responsableEntrega']}" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.responsableEntrega}" />
                     </p:column>
-
-                    
                 </p:dataTable>
+                <p:commandButton value="imprimir">
+                    <p:printer target="form"/>
+                </p:commandButton>
             </h:form>
+            <p:dialog id="edit-dialog" appendToBody="true" header="#{messages['receta.entrega']} #{messages['receta.nombre']} " 
+                      widgetVar="editDlg" modal="true" resizable="true" dynamic="true" width="70%">
+                <h:form id="form-dialog">
+
+                    <p:panelGrid columns="4">
+                        <label for="nombres" >#{messages['common.firstname']}: </label>                        
+                        <h:outputText value="#{recetaListaServicio.recetaSeleccionada.paciente.nombres}" />                                                
+                        <label for="numero" >#{messages['fichaMedica.numero']}: </label>                        
+                        <h:panelGroup >
+                            <h:outputText value="#{recetaListaServicio.recetaSeleccionada.consultaMedica.historiaClinica.fichaMedica.numFicha}" rendered="#{recetaListaServicio.recetaSeleccionada.consultaMedica.persistent}"/>                        
+                            <h:outputText value="#{recetaListaServicio.recetaSeleccionada.consultaOdontologica.fichaOdontologica.fichaMedica.numFicha}" rendered="#{recetaListaServicio.recetaSeleccionada.consultaOdontologica.persistent}"/>                        
+                        </h:panelGroup>                        
+                        <label for="apellidos" >#{messages['common.surname']}: </label>
+                        <h:outputText value="#{recetaListaServicio.recetaSeleccionada.paciente.apellidos}" />
+                        <label for="fecha" >#{messages['comun.fecha.now']}: </label>                        
+                        <h:outputText value="#{recetaListaServicio.recetaSeleccionada.fecha}" >
+                            <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
+                        </h:outputText>                                                
+                    </p:panelGrid>
+                    <p:panelGrid columns="2">
+                        <p:panel header="Medicación" >
+                            <c:forEach items="#{recetaListaServicio.listaMedicaciones}" var="med">
+                                <h:outputText value="#{med}" escape="false" styleClass="span5"/>
+                                <br/>
+                                <br/>
+                            </c:forEach>
+                        </p:panel>                              
+
+                        <p:panel header="Indicaciones">
+                            <c:forEach items="#{recetaListaServicio.listaIndicaciones}" var="indi">
+                                <h:outputText value="#{indi}" escape="false" styleClass="span5"/>   
+                                <br/><br/>
+                            </c:forEach>
+                        </p:panel>
+                    </p:panelGrid>                    
+                    <div class="admin-actions">
+                        <p:commandButton value="#{messages['comun.terminar']}" oncomplete="editDlg.hide();"                                           
+                                         action="#{recetaListaServicio.entregarReceta()}" update=":form"                                         
+                                         immediate="true" 
+                                         style="margin: 0 0 0 30%">  
+                                        <!--recetaListaServicio.entregarReceta()--> 
+                        </p:commandButton> 
+                        &nbsp;&nbsp;
+
+                        &nbsp;&nbsp;
+                        <p:commandButton value="#{messages['common.cancel']}" type="button" onclick="editDlg.hide();"  
+                                         /> 
+                    </div>
+                </h:form>
+            </p:dialog>
         </ui:define>
 
     </ui:composition>
