--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -158,8 +158,8 @@
                             outcome="/pages/farmacia/medicamento/lista">                    
                     </h:link> 
                     <br />  
-                    <h:link value="#{messages['recetas.admin']}" rendered="#{true}" 
-                            outcome="/pages/farmacia/receta/recetas">                    
+                    <h:link value="#{messages['receta.admin']}" rendered="#{true}" 
+                            outcome="/pages/farmacia/receta/listaReceta">                    
                     </h:link> 
                 </p:panel>
             </h:panelGroup>
