Cambios a todo  el proyecto (modelo) y emision de recetas 1

--- a/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
+++ b/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
@@ -98,7 +98,7 @@
                         <f:facet name="header">  
                             <h:outputText value="#{messages['fechaReceta.fechaEmision']}" />  
                         </f:facet> 
-                        <h:outputText value="#{receta_.fecha}" >
+                        <h:outputText value="#{receta_.fechaEmision}" >
                             <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
                         </h:outputText>                        
                     </p:column>
