--- a/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
+++ b/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
@@ -93,8 +93,8 @@
                         <h:outputText value="#{receta_.paciente.nombres}" />
                         &nbsp;&nbsp;
                         <h:outputText value="#{receta_.paciente.apellidos}" />
-                    </p:column>                                
-                    <p:column sortBy="#{receta_.fecha}" style="text-align: center;">
+                    </p:column>
+                    <p:column sortBy="#{receta_.fechaEmision}" style="text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['fechaReceta.fechaEmision']}" />  
                         </f:facet> 
@@ -102,11 +102,14 @@
                             <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
                         </h:outputText>                        
                     </p:column>
-                    <p:column sortBy="#{receta_.estado}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.fechaEntrega}" style="text-align: center;">
                         <f:facet name="header">  
-                            <h:outputText value="#{messages['comun.estado']}" />  
+                            <h:outputText value="#{messages['fechaReceta.fechaEntrega']}" />  
                         </f:facet> 
-                        <h:outputText value="#{receta_.estado}" />
+                        <h:outputText value="#{receta_.fechaEntrega}" >
+                            <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
+                        </h:outputText>
+                        
                     </p:column>
                     <p:column sortBy="#{receta_.responsableEmision}" style="text-align: center;">
                         <f:facet name="header">  
@@ -121,10 +124,28 @@
                         </f:facet> 
                         <h:outputText value="#{receta_.responsableEntrega}" />
                     </p:column>
+                    <p:column sortBy="#{receta_.estado}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{'receta.estado'}" />  
+                        </f:facet> 
+                        <h:outputText value="#{receta_.estado}" />
+                    </p:column>                    
                 </p:dataTable>
-                <p:commandButton value="imprimir">
-                    <p:printer target="form"/>
-                </p:commandButton>
+                
+                <h:panelGrid id="export" class="columns" >
+                <p:panel>
+                    <h:outputText value="Exportar Datos" />  
+                    <br/>
+                    <h:commandLink action="#{reporteListas.renderRecetas()}" >                    
+                        <p:graphicImage value="/resources/images/pdf.png" />                          
+                    </h:commandLink>
+                    #{''}
+                    <h:commandLink >  
+                        <p:graphicImage value="/resources/images/xls1.png" />  
+                        <p:dataExporter type="xls" target="tablaRecetas" fileName="Recetas"/>  
+                    </h:commandLink>
+                </p:panel>
+            </h:panelGrid>
             </h:form>
             <p:dialog id="edit-dialog" appendToBody="true" header="#{messages['receta.entrega']} #{messages['receta.nombre']} " 
                       widgetVar="editDlg" modal="true" resizable="true" dynamic="true" width="70%">
